# Federated_IIoT_Intrusion_Detection

./: .gitignore  LICENSE  README.md  requirements.txt
eval/: aggregate_baseline_results.py  aggregate_federated_results.py  visualise_baseline.py  visualise_results.py
results/baseline/DataSense/_aggregated/: summary.csv  summary.txt
results/baseline/Edge-IIoT/_aggregated/: summary.csv  summary.txt
results/federated/DataSense/_aggregated/: convergence_AttentionFedXgb_XGBoost_iid_12_frac_1.0.csv  convergence_AttentionFedXgb_XGBoost_iid_16_frac_1.0.csv  convergence_AttentionFedXgb_XGBoost_iid_20_frac_1.0.csv  convergence_AttentionFedXgb_XGBoost_iid_2_frac_1.0.csv  convergence_AttentionFedXgb_XGBoost_iid_4_frac_1.0.csv  convergence_AttentionFedXgb_XGBoost_iid_8_frac_1.0.csv  convergence_AttentionFedXgb_XGBoost_non-iid_12_frac_0.4.csv  convergence_AttentionFedXgb_XGBoost_non-iid_12_frac_1.0.csv  convergence_AttentionFedXgb_XGBoost_non-iid_16_frac_0.4.csv  convergence_AttentionFedXgb_XGBoost_non-iid_16_frac_1.0.csv  convergence_AttentionFedXgb_XGBoost_non-iid_20_frac_0.4.csv  convergence_AttentionFedXgb_XGBoost_non-iid_20_frac_1.0.csv  convergence_AttentionFedXgb_XGBoost_non-iid_4_frac_0.4.csv  convergence_AttentionFedXgb_XGBoost_non-iid_4_frac_1.0.csv  convergence_AttentionFedXgb_XGBoost_non-iid_8_frac_0.4.csv  convergence_AttentionFedXgb_XGBoost_non-iid_8_frac_1.0.csv  (+116 more)
src/analysis/: visualise_partitions.py
src/baseline/: data_loader.py  main.py  run_baseline_all.sh  run_tuning_all.sh
src/baseline/models/: dnn.py  random_forest.py  xgboost_model.py
src/baseline/tuning/: tune_tree_models_bayesian.py
src/federated/: AttentionWeightedFedXgbBagging.py  client_app.py  pyproject.toml  run_client_sweep.sh  run_mu_sweep.sh  server_app.py  task.py
(+2309 files in other folders)
